Translate SRE interview guides to structured English responses